fix: text list item

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -68,15 +68,24 @@ nav{
 
 .menu_list ul li{
     list-style: none;
+    text-decoration: none;
 
 }
 .list_item{
     font-family: 'circular';
     font-size: 1em;
     font-weight: bold;
-    padding: 0 20px 0 20px;
+    padding: 0 20px 0 20px;    
 }
 
+.list_item a{
+    text-decoration: none;
+    color: inherit;
+}
+
+.list_item a:hover{
+    color: #1ed760;
+}
 .services{
     border-right: 1px solid #fff;
     padding-right: 20px;
